--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             <a href="#">免费下载</a>
         </div>
     </div>
+    <script src="js/rem.js"></script>
 <!--点击关闭下载客户端-->
     <script src="js/zepto.js"></script>
     <script>
