二手房页面

--- a/usedhouse.html
+++ b/usedhouse.html
@@ -49,9 +49,161 @@
             <h2><a href="#">更多<span></span></a></h2>
         </li>
     </ul>
-    <ul class="navBody"><!--导航主体内容-->
 
+    <ul class="navBody"><!--导航主体内容-->
+        <li class="region"><!--区域-->
+            <ul>
+                <li class="action"><h3><a href="">区域</a></h3></li>
+                <li><h3><a href="">地铁</a></h3></li>
+            </ul>
+            <ul>
+                <li>附近</li>
+                <li>不限</li>
+                <li>朝阳</li>
+                <li>海淀</li>
+                <li>昌平</li>
+                <li>丰台</li>
+                <li>石景山</li>
+            </ul>
+            <ul>
+                <li>不限</li>
+                <li>安贞</li>
+                <li>奥林匹克公园</li>
+                <li>杨子弯</li>
+                <li>北工大</li>
+                <li>北苑</li>
+                <li>CBD</li>
+            </ul>
+        </li>
+        <li class="price"><!--价格-->
+            <ul>
+                <li>不限</li>
+                <li>100以下</li>
+                <li>100万-150万</li>
+                <li>150万-200万</li>
+                <li>200万-250万</li>
+                <li>250万-300万</li>
+                <li>自定义价格</li>
+            </ul>
+        </li>
+        <li class="houseType"><!--户型-->
+            <ul>
+                <li>不限</li>
+                <li>1室<span></span></li>
+                <li>2室<span></span></li>
+                <li>3室<span></span></li>
+                <li>4室<span></span></li>
+                <li>5室<span></span></li>
+            </ul>
+        </li>
+        <li class="more"><!--更多-->
+            <ul>
+                <li>
+                    <h3>区域</h3>
+                    <div>
+                        <span>南</span><span>南北</span><span>东</span><span>西</span><span>北</span>
+                    </div>
+                </li>
+                <li>
+                    <h3>面积（平方）</h3>
+                    <div>
+                        <span>50以下</span><span>50-70</span><span>70-90</span><span>90-100</span><span>100-130</span>
+                        <span>130-150</span><span>150-200</span><span>200以上</span>
+                    </div>
+                </li>
+                <li>
+                    <h3>标签</h3>
+                    <div>
+                        <span>学区房</span><span>地铁房</span><span>不限购</span><span>满两年</span><span>满五唯一</span>
+                        <span>降价</span><span>新上</span><span>独家</span><span>有钥匙</span>
+                    </div>
+                </li>
+            </ul>
+        </li>
     </ul>
 </div>
+
+<!--房源-->
+<div class="houseList">
+    <ul>
+       <li>
+           <img src="image/index/img1.jpg" alt="">
+           <div class="text">
+               <h3>西便门外大街2室1厅89平</h3>
+               <p><span>南北</span><span>高楼六层</span></p>
+               <p>2室1厅96㎡南北 <strong>1105万</strong></p>
+               <p>签约时间：2015年11月2日</p>
+           </div>
+       </li>
+        <li>
+            <img src="image/index/img2.png" alt="">
+            <div class="text">
+                <h3>金桥国际 1室1厅63平</h3>
+                <p><span>南北</span><span>高楼六层</span></p>
+                <p>2室1厅96㎡南北 <strong>1105万</strong></p>
+                <p>签约时间：2015年11月2日</p>
+            </div>
+        </li>
+        <li>
+            <img src="image/index/img3.png" alt="">
+            <div class="text">
+                <h3>花间隙二期 2室1厅100平</h3>
+                <p><span>南北</span><span>高楼六层</span></p>
+                <p>2室1厅96㎡南北 <strong>1105万</strong></p>
+                <p>签约时间：2015年11月2日</p>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<!--底部-->
+<footer>
+    <h2>北京找房无忧>首页</h2><!--页面说明部分-->
+    <div class="content"><!--手机客户端部分-->
+        <ul>
+            <li>
+                <img src="image/index/apple.png" alt="">
+                <div>
+                    <p>iPhone</p>
+                    <p>客户端</p>
+                </div>
+            </li>
+            <li>
+                <img src="image/index/android.png" alt="">
+                <div>
+                    <p>Android</p>
+                    <p>客户端</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="text"><!--底部说明部分-->
+        <p>北京找房无忧房地产有限公司</p>
+        <p>网络经营许可证京ICP备20160812号</p>
+    </div>
+</footer>
+
+<!--点击标题栏-->
+<script src="js/zepto.js"></script>
+<script>
+    $(function () {
+        $(".title li").tap(
+            function () {
+                $(".navBody>li").css({'display':'none'});
+                $(".navBody>li").eq($(this).index()).css({'display':'inline','display':'flex'});
+            }
+        )
+       /* $(".title li:nth-child(1)").tap(
+            function () {
+                $(".region").css({'display':'block','display':'flex'})
+            });
+        $(".title li:nth-child(2)").tap(
+            function () {
+                $('.navBody li').css({'display':'none'})
+                $(".price").css({'display':'block','display':'flex'})
+
+            });*/
+    });
+</script>
 </body>
 </html>
